syntax = "proto3";

package worker;
import "common/probe.proto";
import "common/event.proto";
import "common/common.proto";
import "common/stream.proto";

option go_package = "lightflus/runtime/proto";

service TaskWorkerApi {
  rpc Probe(common.ProbeRequest) returns (common.ProbeResponse) {}
  rpc SendEventToOperator(common.KeyedDataEvent) returns (SendEventToOperatorResponse){}
  rpc StopDataflow(common.ResourceId) returns (StopDataflowResponse) {}
  rpc CreateSubDataflow(CreateSubDataflowRequest) returns(CreateSubDataflowResponse) {}
}

message SendEventToOperatorResponse {
  SendEventToOperatorStatusEnum status = 1;
}

enum SendEventToOperatorStatusEnum {
  DISPATCHING = 0;
  DONE = 1;
  FAILURE = 2;
}

message StopDataflowResponse {
  common.Response resp = 1;
}

message CreateSubDataflowRequest {
  common.ResourceId job_id = 1;
  common.Dataflow dataflow = 2;
}

message CreateSubDataflowResponse {
  common.DataflowStatus status = 1;
}